--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,29 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
+h1,
+p {
+  user-select: none;
+}
+
+img {
+  user-select: none;
+  pointer-events: none;
+}
+
+.nav-link {
+  @apply text-light font-primary hover:font-semibold duration-1000;
+}
