--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,18 @@ img {
   pointer-events: none;
 }
 
+.section-style {
+  @apply w-full min-h-screen flex flex-col items-center justify-center
+}
+
 .nav-link {
-  @apply text-light font-primary hover:font-semibold duration-1000;
+  @apply text-light font-primary transition-all duration-700 ease-in-out;
+}
+
+.nav-link:hover {
+  @apply text-secondary scale-105;
+}
+
+.input-style {
+  @apply w-full border-2 border-secondary px-6 py-4 bg-primary text-secondary focus:border-secondary focus:outline-none placeholder:text-secondary;
 }
